<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_cities">Город</string>
    <string name="pref_cities_summary">Выберите для какого города получать расписание</string>
    <string name="pref_problem">Сообщить о проблеме</string>
    <string name="pref_about">О программе</string>
    <string name="pref_about_summary" formatted="false">Версия %s b%s</string>

    <string name="support_email_subject" formatted="false">Проблема в %s %s b%s</string>
    <string name="support_email_intent_caption">Сообщить о проблеме</string>

    <string name="app_name">ГдеКИНО</string>
    <string name="app_version">1.5.5</string>
    <string name="app_version_code">38</string>
    <string name="copyright">© 2012, Dedaulus, Donytar, Aleserma</string>
    <string name="email">support@gdekino.net</string>
    <string name="url">gdekino.net</string>
    <string name="copyright_icons">В программе используется набор иконок MetroStation от Yanko Andreev</string>
    <string name="icons_url">yankoa.deviantart.com</string>
    <string name="julya">Спасибо красавице Юле Соколовой (sochok25) за любовь к тому что я делаю</string>

    <string name="new_version_caption">Что нового?</string>
    <string name="new_version">● Исправлены ошибки</string>

    <string name="loading_schedule">Загружается расписание...</string>
    <string name="loading_cities">Загружается список городов...</string>
    <string name="try_again">Попробовать еще раз</string>

    <string name="sync_bad_response">Извините, у нас возникли проблемы на сервере. Мы постараемся всё исправить в кратчайшие сроки</string>
    <string name="sync_no_response">Не удается подключиться к серверу. Убедитесь, что ваш дроид имеет доступ в интернет</string>
    <string name="sync_out_of_date">К сожалению, сейчас у нас нет актуального расписания для выбранного города. Попробуйте позже или выберите другой город</string>
    <string name="sync_out_of_date_button">Сменить город</string>
    <string name="sync_update_needed">Мы внесли важные изменения в серверную часть приложения. Пожалуйста, обновите ваше приложение для продолжения работы</string>
    <string name="sync_update_needed_button">Обновить</string>

    <string name="categories_caption">Категории</string>
    <string name="whats_new_caption">Новинки</string>
    <string name="cinemas_caption">Кинотеатры</string>
    <string name="cinema_caption">Кинотеатр</string>
    <string name="movies_caption">Фильмы</string>
    <string name="movie_caption">Фильм</string>
    <string name="showtime_caption">Сеансы</string>
    <string name="frames_caption">Кадры</string>
    <string name="description_caption">Описание</string>
    <string name="actors_caption">Актёры</string>
    <string name="genres_caption">Жанры</string>
    <string name="about_caption">О программе</string>
    <string name="wait_dialog_caption">Синхронизация</string>
    <string name="wait_dialog_text">Загрузка кинотеатров, фильмов и прочего...</string>

    <string name="cinemas_separator">КИНОТЕАТРЫ</string>
    <string name="movies_separator">ФИЛЬМЫ</string>
    <string name="actors_separator">АКТЁРЫ</string>
    <string name="genres_separator">ЖАНР</string>
    <string name="director_separator">РЕЖИССЁРЫ</string>
    <string name="description_separator">ОПИСАНИЕ</string>
    <string name="address_separator">АДРЕС</string>
    <string name="phone_separator">ТЕЛЕФОН</string>
    <string name="empty_search">Ничего не найдено</string>

    <string name="movie_trailer_link">"Трейлеры на YouTube</string>
    <string name="movie_length">Продолжительность</string>
    <string name="genre">Жанр</string>
    <string name="actors">Актёры</string>
    <string name="movie_description">Описание</string>
    <string name="hour">ч.</string>
    <string name="minute">мин.</string>
    <string name="unknown">неизвестно</string>
    <string name="look_for_schedule">Все сеансы</string>

    <string name="year">г.</string>
    <string name="director">Реж.</string>
    <string name="imdb">imdb:</string>

    <string name="schedule_enum">Сеансы в кин.</string>
    <string name="no_schedule">сеансов нет</string>
    <string name="unknown_schedule">Данных о сеансах нет</string>
    <string name="schedule_now">прямо сейчас</string>
    <string name="schedule_start_in">через</string>

    <string name="date">Дата</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="after_tomorrow">Послезавтра</string>

    <string name="day_part">Время</string>
    <string name="at_whole_day">Весь день</string>
    <string name="in_morning">Утром</string>
    <string name="in_afternoon">Днём</string>
    <string name="in_evening">Вечером</string>
    <string name="at_night">Ночью</string>

    <string name="metro_near">Метро</string>

    <string name="sort">Упорядочить</string>
    <string name="sort_by_caption">По названию</string>
    <string name="sort_by_fav">По любимым</string>
    <string name="sort_by_distance">По ближайшим</string>
    <string name="sort_by_popular">По популярности</string>
    <string name="sort_by_imdb">По рейтингу IMDB</string>
    <string name="sort_by_kp">По рейтингу КП</string>
    <string name="sort_by_time_left">По времени до сеанса</string>

    <string name="menu_preferences">Настройки</string>
    <string name="menu_home">Домой</string>
    <string name="menu_call">Позвонить</string>
    <string name="menu_show_map">На карте</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_near">Сеансы</string>

    <string name="send_link">Отправить ссылку</string>
    <string name="generate_link">Создание ссылки...</string>
    <string name="generate_link_failed">В данный момент невозможно создать ссылку. Попробуйте позже</string>

    <string name="location_changed">Ваше местоположение изменилось, сортирую кинотеатры...</string>

    <string name="time_range" formatted="false">Сеансы с %d:00 до %d:00</string>

    <string name="km">км</string>
    <string name="m">м</string>
    <string name="inf">∞</string>

    <string name="google">Google</string>
    <string name="yandex">Яндекс</string>
    <string name="wiki">Википедия</string>

    <string name="cities_file">cities.xml</string>
    <string name="connect_url">http://gdekino.net/cinematty/connect.php</string>

    <string name="youtube_search_url">http://m.youtube.com/#/results?q=Трейлер фильма</string>
    <string name="youtube_search_url2">Трейлер фильма</string>
    <string name="image_search_url">http://www.google.com/m/search?site=images&amp;q=кадры из фильма</string>
    <string name="google_search_url">http://www.google.com/m/search?&amp;q=</string>
    <string name="wiki_search_url">http://ru.m.wikipedia.org/w/index.php?title=Служебная%3ASearch&amp;search=</string>
    <string name="yandex_search_url">http://yandex.ru/touchsearch?text=</string>
</resources>
