<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_cinema_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_menu_sort_by_size">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/submenu_cinema_sort_by_caption"
                    android:title="@string/sort_by_caption"/>

                <item
                    android:id="@+id/submenu_cinema_sort_by_favourite"
                    android:title="@string/sort_by_fav"/>

                <item
                    android:id="@+id/submenu_cinema_sort_by_distance"
                    android:title="@string/sort_by_distance"/>

            </group>

        </menu>

    </item>

</menu>