<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 style="@style/ContentContainer"
                 android:background="@drawable/action_bar_background"
                 android:padding="10dp">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/splash" />

        <TextView
            android:id="@+id/app_name"
            android:layout_below="@id/splash_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="#FF5D08"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/app_version"
            android:layout_below="@id/app_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_below="@id/app_version"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:text="@string/copyright"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email"
            android:layout_below="@id/copyright"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="40dp"
            android:text="@string/url"
            android:textSize="18sp"
            android:autoLink="web"/>
        <!--
        <TextView
            android:id="@+id/icons_copyright"
            android:layout_below="@id/email"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/copyright_icons"
            android:textColor="#000000"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/icons_url"
            android:layout_below="@id/icons_copyright"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/icons_url"
            android:textColor="#0026ff"
            android:textSize="16dp"
            android:autoLink="web"/>
        -->
    </RelativeLayout>

</RelativeLayout>
